tests/e2e/function_return_object.story
function foo returns object
    return app

b = foo()
